# tubecast

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
src/tubecast/: __init__.py  cli.py  config.py
src/tubecast/commands/: __init__.py
src/tubecast/services/: __init__.py  gemini.py  youtube.py
src/tubecast/utils/: __init__.py  ui.py
